--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <section>
 	
 	<h1>Palm Coast Locksmith Services</h1>
-	<p>Palm Coast Locksmith is a mobile locksmith company serving the Palm Beach area, including Daytona Beach,  believes in treating our customers like family. When you call us, you can be confident that you are dealing with professionals who strive to provide all of our customers fast and reliable locksmith services for their home, business or automobile. </p>
+	<p>Palm Coast Locksmith is a mobile locksmith company serving the Palm Beach area, including Flagler Beach and Daytona Beach,  believes in treating our customers like family. When you call us, you can be confident that you are dealing with professionals who strive to provide all of our customers fast and reliable locksmith services for their home, business or automobile. </p>
 	<p>We are a locally owned and operated company and have been proudly serving the Palm Coast area with reliable locksmith services. As a local Palm Coast locksmith, we are committed to providing our clients with fast, professional, and honest service for all their commercial, residential, and automotive locksmith needs. We genuinely care for each one of our customers, ensuring that they have the best experience possible and can quickly resume their daily routines.</p>
 	
 	<hr size="1px" noshade>
@@ -118,15 +118,15 @@
 	
 	<p>We only provide the best solutions to resolve your lock problems, and we will always strive to be at your service as soon as possible.</p>
 	
-	<p>Our <a href="/">Palm Coast locksmith</a> team is dedicated to keeping you safe and secure. We understand that lock and key problems can happen when you least expect them, so we offer 24/7 emergency locksmith services. Day or night, we're just a phone call away, ready to rescue you from any lockout situation or fix any lock-related issue.</p>
+	<p>Our team of professional <a href="/">locksmiths in Palm Coast</a> is dedicated to keeping you safe and secure. We understand that lock and key problems can happen when you least expect them, so we offer 24/7 emergency locksmith services. Day or night, we're just a phone call away, ready to rescue you from any lockout situation or fix any lock-related issue.</p>
 	
 	<p>Your safety and satisfaction are our top priorities. We're committed to providing exceptional locksmith services tailored to your needs. So, whether you need help at home, work, or on the road, Palm Coast Locksmith is here to lend a helping hand. Give us a call today and let us take care of all your locksmith needs with skill and care.</p>
 	
 	<p>For your home, we've got a range of services to ensure your peace of mind. Whether you need new locks, repairs, or key duplication, we've got you covered. We can also help you with keyless entry systems and security upgrades, so you can feel confident in your home's protection.</p>
 	
-	<p>When it comes to your business, we know how important security is. That's why we offer services like master key system installation, access control systems, and high-security lock installation. We'll help you safeguard your assets and create a secure environment for your employees and customers.</p>
+	<p>When it comes to your business, our Plam Beach locksmith team knows how important security is. That's why we offer services like master key system installation, access control systems, and high-security lock installation. We'll help you safeguard your assets and create a secure environment for your employees and customers.</p>
 	
-	<p>Here at Palm Coast Locksmith, we pride ourselves on our professionalism and reliability. We offer competitive pricing and transparent quotes, so you know exactly what to expect. We use high-quality locks and security products to ensure your safety. And our friendly staff is always ready to assist you with a smile.</p>
+	<p>Here at <strong>Palm Coast Locksmith</strong>, we pride ourselves on our professionalism and reliability. We offer competitive pricing and transparent quotes, so you know exactly what to expect. We use high-quality locks and security products to ensure your safety. And our friendly staff is always ready to assist you with a smile.</p>
 	
 	<p>If you're locked out of your car, don't panic! Our automotive locksmith services are designed to get you back on the road in no time. Whether you need help with car lockouts, key replacements, or ignition repairs, our skilled locksmiths have the expertise to handle it all.</p>
 
@@ -135,7 +135,7 @@
 <section class="flex light">
 	<div class="col one">
 		<h2>Our Palm Coast Locksmith Services</h2>
-		<p>Our team of skilled locksmiths is here to help you out whenever you need it. From unlocking your front door when you're locked out to fixing a jammed lock, we've got you covered. We'll get you back on track, so you can continue your day hassle-free.</p>
+		<p>Our team of skilled locksmiths for Pam Beach and surrounding areas is here to help whenever you need locksmith services. From unlocking your front door when you're locked out to fixing a jammed lock, we've got you covered. We'll get you back on track, so you can continue your day hassle-free.</p>
 	</div>
 
 	<div class="col three">
@@ -155,6 +155,13 @@
 
 </section>
 
+<section class="flex">
+	<div class="col one">
+		<h2>Our Service Locations</h2>
+		<p>Our Palm Coast-based locksmith team serves Palm Coast (Florida) and nearby locations. Our locksmith services are available in Palm Coast, Flagler Beach, Daytona Beach, Beverly Beach, Dupont, Painters Hill, Espanola, Korona, Bunnell, Ormond Beach, Favoretta, Marineland, Crescent Beach, St. Augustine, etc. We provide residential, automotive, commercial and emergency locksmith services in all of the Palm Beach area. Give us a call for professional locksmith services in Palm Beach and surrounding areas.</p>
+	</div>
+</section>
+	
 <section class="dark">
 
 	<h4>Stay Alert & Secure</h4>
