--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@
 		<ul class="nav-links">
 
 	      <!-- USING CHECKBOX HACK -->
-	      <input type="checkbox" id="checkbox_toggle" />
-	      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+	      <input type="checkbox" id="checkbox_toggle" aria-hidden="true"/>
+	      <label aria-hidden="true" for="checkbox_toggle" class="hamburger">&#9776;</label>
 
 	      <!-- NAVIGATION MENUS -->
 	      <div class="menu">
