--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/css/style.css">
 	<link rel="icon" type="image/png" href="/images/favicon.png">
-
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
   
 </head>
 <body>
@@ -29,8 +25,8 @@
 		<ul class="nav-links">
 
 	      <!-- USING CHECKBOX HACK -->
-	      <input type="checkbox" id="checkbox_toggle" />
-	      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+	      <input type="checkbox" id="checkbox_toggle" aria-hidden="true"/>
+	      <label aria-hidden="true" for="checkbox_toggle" class="hamburger">&#9776;</label>
 
 	      <!-- NAVIGATION MENUS -->
 	      <div class="menu">
@@ -71,7 +67,7 @@
 
 <section class="flex light">
 	<div class="col one">
-		<h2>Why Our Palm Coast Locksmith Company?</h2>
+		<h3>Why Our Palm Coast Locksmith Company?</h3>
 		<p>When it comes to locksmith services, you want a reliable and trustworthy company that can meet your needs with professionalism and efficiency. Here are the reasons why Palm Coast Locksmith should be your top choice:</p>
 	</div>
 
@@ -164,7 +160,7 @@
 	
 <section class="dark">
 
-	<h4>Stay Alert & Secure</h4>
+	<h3>Stay Alert & Secure</h3>
 
 	<p>As per the official website of <a href="https://www.townofpalmbeach.com/">the town of Palm Beach</a>, there have been an alarming increase in use of AI (artificial intelligence) to scam people by imitating voices of family members.</p>
 	
