--- a/service-areas.html
+++ b/service-areas.html
@@ -11,10 +11,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/css/style.css">
 	<link rel="icon" type="image/png" href="/images/favicon.png">
-
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
   
 </head>
 <body>
@@ -29,8 +25,8 @@
 		<ul class="nav-links">
 
 	      <!-- USING CHECKBOX HACK -->
-	      <input type="checkbox" id="checkbox_toggle" />
-	      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+	      <input type="checkbox" id="checkbox_toggle" aria-hidden="true"/>
+	      <label aria-hidden="true" for="checkbox_toggle" class="hamburger">&#9776;</label>
 
 	      <!-- NAVIGATION MENUS -->
 	      <div class="menu">
