--- a/services.html
+++ b/services.html
@@ -12,10 +12,6 @@
 	<link rel="stylesheet" href="/css/style.css">
 	<link rel="icon" type="image/png" href="/images/favicon.png">
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
-  
 </head>
 <body>
 
@@ -29,22 +25,15 @@
 		<ul class="nav-links">
 
 	      <!-- USING CHECKBOX HACK -->
-	      <input type="checkbox" id="checkbox_toggle" />
-	      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+	      <input type="checkbox" id="checkbox_toggle" aria-hidden="true"/>
+	      <label aria-hidden="true" for="checkbox_toggle" class="hamburger">&#9776;</label>
 
 	      <!-- NAVIGATION MENUS -->
 	      <div class="menu">
 	      
 				<li><a href="/">Home</a></li>
 				<li><a href="/about">About</a></li>
-				<li class="services"><a href="/services">Services</a>
-	          <!-- DROPDOWN MENU -->
-	          <ul class="dropdown">
-	            <li><a href="/residential">Residential</a></li>
-	            <li><a href="/commercial">Commercial</a></li>
-	            <li><a href="/automobile">Automotive</a></li>
-	          </ul>
-				</li>
+				<li><a href="/services">Services</a></li>
 				<li><a href="/service-areas">Service Areas</a></li>
 				<li><a href="/contact">Contact</a></li>
 	
