--- a/contact.html
+++ b/contact.html
@@ -49,11 +49,19 @@
 <section>
 	
 	<h1>Contact - Palm Coast Locksmith</h1>
-	<p>We are a local locksmith company in the Palm Coast area. We are committed to delivering fast, professional, and honest locksmith service in the Palm Coast area.</p>
+	<p>Reach a local locksmith company in the Palm Coast area. We are committed to delivering fast, professional, and honest locksmith service in the Palm Coast area.</p>
 
 	<hr size="1px" noshade>
 	<p><strong>Phone:</strong> (386) 295-6445 (Local Lock & Key)</p>
 	<p><strong>Address:</strong> Brookside Ln, Palm Coast, FL 32137</p>
+	
+	<hr size="1px" noshade>
+	<p><strong>Phone:</strong>  (386) 503-0077 (Coastal)</p>
+	<p><strong>Address:</strong> 5652 N Ocean Shore Blvd, Palm Coast, FL 32137</p>
+
+	<hr size="1px" noshade>
+	<p><strong>Phone:</strong>  (386) 449-9023 (Lockey)</p>
+	<p><strong>Address:</strong> Roxanne Ln, Palm Coast, FL 32164</p>
 			
 </section>
 
